Fix overflow hiding editor controls

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -170,15 +170,15 @@
         }
 
 
-        #page-zones__main > .widget:not([data-name="row"]) .widget__item--move {
-            top: 0;
-        }
+        // #page-zones__main > .widget:not([data-name="row"]) .widget__item--move {
+        //     top: 0;
+        // }
 
 
-        #page-zones__main > .widget:not([data-name="row"]) .widget__item--delete {
-            right: 0;
-            top: 0;
-        }
+        // #page-zones__main > .widget:not([data-name="row"]) .widget__item--delete {
+        //     right: 0;
+        //     top: 0;
+        // }
     }
 
 
@@ -343,6 +343,10 @@
         @media only screen and (max-width: 1000px) {
             padding-left: 15px;
             padding-right: 15px;
+        }
+        
+        [data-name="image"] .image {
+            display: block;
         }
     }
 
